<resources>
    <string name="app_name">HowsTheWiFi</string>
    <string name="default_empty">-</string>
    <string name="check_connection">Check Connection</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="ping">Ping</string>
    <string name="packet_loss">Packet Loss</string>
    <string name="address">Address</string>
    <string name="send">Send</string>
    <string name="title_activity_main">WiFi Speeds</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="post_api_url">http://192.168.1.8:8000/api/wifispeed/create</string>
    <string name="get_api_url">http://192.168.1.8:8000/api/wifispeed/</string>
    <string name="user_settings_keystore">howswifi_settings</string>
    <string name="pins_key">howswifi_pins</string>
</resources>